--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@
 .shadowCard {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.26);
 }
+
+.shadowBox{
+    box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.25);
+}
